--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,8 +1,7 @@
 
-
 @media only screen and (max-width: 1460px) {
    
-    .container-work .sec-headder {
+    .container-work .section-headder {
         margin-left: 0;
         justify-content: space-around;
     }
@@ -44,35 +43,44 @@
         margin-right: 20px;
     }
 
-    .sec-prices .position-list, 
-    .sec-about .plus, 
-    .sec-services .service-field {
+    .section-prices .position-list, 
+    .section-about .plus, 
+    .section-services .service-field {
         justify-content: center;
+    }
+
+    .container-work .section-work__inner .gallery__foto .fotowork {
+        height: 300px;
+        width: 300px;
     }
 }
 
 /* Medium Devices, Desktops */ 
 @media only screen and (max-width: 992px) { 
    
-    .header-top__burger { 
-        display:flex;
+    header .header-top {
+        align-items: center;
+
+        & .burger { 
+            display: flex;
+        }
     }
 
-    .sec-title,
-    .sec-masters__subtitle {
+    .section-title,
+    .section-masters__subtitle {
         text-align: center;
     } 
 
-    .sec-about .salontext,
-    .sec-masters .masters-field,
-    .sec-prices .categories {
+    .section-about .salontext,
+    .section-masters .masters-field,
+    .section-prices .categories {
         justify-content: center;
     }
 
     .navigation__list {
         display: none;
     }
-
+    
     .header-bottom {
         
         &__title {
@@ -80,6 +88,7 @@
         }
 
         &__lady {
+
             img {
                 width: 300px;
             } 
@@ -91,20 +100,39 @@
         }
     }
     
-    .sec-about .salontext__text {
+    .section-about .salontext__text {
         width: 100%;
     }
 
-    .sec-contacts__inner {
-        justify-content: center;
-        gap: 30px;
+    .section-contacts {
+        &__inner {
+            justify-content: center;
+            gap: 30px;
+
+            & .contact {
+                order: 2;
+            }
+        }
+
+        &__form {
+            justify-content: center;
+            order: 1;
+        }
     }
-    .sec-contacts__inner .contact {
-        order: 2;
+
+    .container-work .section-work__inner .gallery__foto .fotowork {
+        height: 250px;
+        width: 250px;
     }
-    .sec-contacts__form {
-        justify-content: center;
-        order: 1;
+
+    .slick-prev {
+        left: 40%;
+        top: -5px;
+    }
+    
+    .slick-next {
+        left: 60%;
+        top: -5px;
     }
 } 
 
@@ -120,6 +148,11 @@
             margin-bottom: 30px; 
         }
     }
+    
+    .container-work .section-work__inner .gallery__foto .fotowork {
+        height: 180px;
+        width: 180px;
+    }
 } 
 
 /* Extra Small Devices, Phones */ 
@@ -127,18 +160,39 @@
 
     .header-top {
         gap: 15px;
+
+        & .phoneinfo {
+            display: none;
+        }
     } 
 
-    .phoneinfo__tel {
-        text-align: left;
+    .header-bottom {
+        &__title {
+        font-size: 36px;
+        line-height: 40px;
+        }
+        &__subtitle {
+            font-size: 16px;
+        }
     }
-
+ 
     .about__video img {
         max-width: 350px;
     }
 
-    .sec-title {
+    .section-title {
         font-size: 36px;
     }
 
+    .section-contacts__form .form {
+        width: 350px;
+    }
+    .section-contacts__form .form input,
+    .section-contacts__form .form__btn {
+        width: 280px;
+    }
+    .container-work .section-work__inner .gallery__foto .fotowork {
+        height: 170px;
+        width: 120px;
+    }
 }
