--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -675,6 +675,10 @@ header {
     .modal-alert_active {
         visibility: visible;
     }
+    
+    .block-position {
+        display: none;
+    }
 }
 
 /*Подвал*/
